// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands npm login it should login a user with OTP setup 1`] = `
"npmRegistries:
  \\"http://yarn.test.registry\\":
    npmAuthToken: 0d5165d0-aa93-599d-8ab8-326d64964a82
"
`;

exports[`Commands npm login it should login a user with OTP setup 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Successfully logged in
➤ YN0000: Done
",
}
`;

exports[`Commands npm login it should login a user with OTP to a specific scope 1`] = `
"npmScopes:
  testScope:
    npmAuthToken: 0d5165d0-aa93-599d-8ab8-326d64964a82
    npmRegistryServer: \\"http://yarn.test.registry\\"
"
`;

exports[`Commands npm login it should login a user with OTP to a specific scope 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Successfully logged in
➤ YN0000: Done
",
}
`;

exports[`Commands npm login it should login a user with no OTP setup 1`] = `
"npmRegistries:
  \\"http://yarn.test.registry\\":
    npmAuthToken: 9d33b95c-ac4d-5a16-a2d6-ae920e9da2f5
"
`;

exports[`Commands npm login it should login a user with no OTP setup 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Successfully logged in
➤ YN0000: Done
",
}
`;

exports[`Commands npm login it should login a user with no OTP setup to a specific scope 1`] = `
"npmScopes:
  testScope:
    npmAuthToken: 9d33b95c-ac4d-5a16-a2d6-ae920e9da2f5
    npmRegistryServer: \\"http://yarn.test.registry\\"
"
`;

exports[`Commands npm login it should login a user with no OTP setup to a specific scope 2`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: Successfully logged in
➤ YN0000: Done
",
}
`;
